correction des polices et alignement des titres

--- a/LahouitiYounes_3_24012022/sass/Base/_norm.scss
+++ b/LahouitiYounes_3_24012022/sass/Base/_norm.scss
@@ -25,6 +25,10 @@ a{
     }
 }
 
+h1, h2{
+    font-family: "Shrikhand";
+}
+
 
 
 
