--- a/LahouitiYounes_3_24012022/sass/Layout/_header.scss
+++ b/LahouitiYounes_3_24012022/sass/Layout/_header.scss
@@ -7,11 +7,7 @@
     display: none;
   }
 
-  &__heading {
-    @extend %headings;
-  }
-
-  &__text{
+  &__text {
     @extend %text;
   }
 
@@ -21,8 +17,9 @@
       display: none;
     }
   }
-
- 
+&__heading{
+  font-family: "Roboto";
+}
 
   &__logo {
     font-family: "Shrikhand";
@@ -37,8 +34,6 @@
       height: 70px;
     }
   }
-
-
 
   &__location {
     background-color: $color-grey;
@@ -61,9 +56,8 @@
     background-color: $color-light-grey;
     text-align: center;
     padding-bottom: 25px;
-    @include mobile-only{
+    @include mobile-only {
       padding-bottom: 50px;
     }
-    
   }
 }
