--- a/LahouitiYounes_3_24012022/sass/Pages/_accueil.scss
+++ b/LahouitiYounes_3_24012022/sass/Pages/_accueil.scss
@@ -1,8 +1,4 @@
 .main {
-  &__heading {
-    font-weight: bold;
-  }
-
   &__text {
     @extend %text;
   }
@@ -10,13 +6,17 @@
   &__operation {
     text-align: center;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
+  //  flex-flow: column wrap;
     justify-content: flex-start;
     align-items: center;
 
-    &-heading {
-      @extend %headings;
+    h2{
+      @include Roboto-heading;
     }
+
+    
+
     &-card-list {
       display: flex;
       @include mobile-only {
@@ -57,9 +57,9 @@
   &__section {
     background-color: $color-light-grey;
     @include center-flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     &-heading {
-      @extend %headings;
+     @include Roboto-heading;
     }
   }
 
@@ -129,9 +129,12 @@
       background-color: $color-white;
     }
     &-text {
-      @include margin(5px, 0px, 15px, 10px);
+      margin: 10px;
       p {
         margin: 5px;
+      }
+      h4 {
+        margin: 5px 5px 5px 5px;
       }
     }
   }
