--- a/LahouitiYounes_3_24012022/sass/Utils/_extensions.scss
+++ b/LahouitiYounes_3_24012022/sass/Utils/_extensions.scss
@@ -1,9 +1,5 @@
 // %placeholder puis pour utlisation → @extend
 
-%headings{
-    font-weight: bold;
-    font-size: 24px;
-}
 
 %text{
     font-weight: 300;
